--- a/index.html
+++ b/index.html
@@ -1123,8 +1123,8 @@ async function renderPhotoPosts() {
 
 if (photo.videoSrc) {
   mediaElement = document.createElement("video");
+  mediaElement.muted = true;
   mediaElement.src = photo.videoSrc;
-  mediaElement.muted = true;      // mute video so autoplay works without user interaction
   mediaElement.autoplay = true;   // autoplay on load
   mediaElement.loop = true;       // loop forever
   mediaElement.playsInline = true; // important for mobile autoplay
@@ -1514,13 +1514,13 @@ function exportCatchCardAsImage(card, photo) {
   renderContainer.remove();
 }
 
-async function exportCatchCard(card, photo) {
+async function exportCatchCard(card, photo, recordDurationMs = 5000, useWhammy = true) {
   const clone = card.cloneNode(true);
   clone.classList.add("export-style");
   clone.style.width = "420px";
   clone.style.height = "620px";
 
-  // Background & rarity
+  // Background & rarity setup
   const bg = document.createElement("div");
   bg.className = "card-background";
   const backgroundMap = {
@@ -1530,7 +1530,6 @@ async function exportCatchCard(card, photo) {
     4: "./Background-4.png",
     5: "./Background-5.png",
   };
-  // For consistent rarity, use photo.rarity or fallback random
   const starsCount = photo.rarity || Math.floor(Math.random() * 5) + 1;
   const rarity = document.createElement("div");
   rarity.className = "catch-rarity";
@@ -1544,28 +1543,29 @@ async function exportCatchCard(card, photo) {
   const buttons = clone.querySelector(".catch-buttons");
   if (buttons) buttons.remove();
 
-  // Wrap photo in image-window
+  // Wrap media (image or video) inside image-window
   let mediaElement = clone.querySelector(".catch-photo");
-const imageWrapper = document.createElement("div");
-imageWrapper.className = "image-window";
+  const imageWrapper = document.createElement("div");
+  imageWrapper.className = "image-window";
 
-if (mediaElement.tagName === "VIDEO") {
-  const videoClone = mediaElement.cloneNode(true);
-  videoClone.muted = true;
-  videoClone.loop = true;
-  videoClone.autoplay = true;
-  videoClone.controls = false;
-  imageWrapper.appendChild(videoClone);
-} else {
-  imageWrapper.appendChild(mediaElement.cloneNode(true));
-}
+  if (mediaElement.tagName === "VIDEO") {
+    const videoClone = mediaElement.cloneNode(true);
+    videoClone.muted = true;
+    videoClone.loop = true;
+    videoClone.autoplay = true;
+    videoClone.controls = false;
+    imageWrapper.appendChild(videoClone);
+  } else {
+    imageWrapper.appendChild(mediaElement.cloneNode(true));
+  }
+  mediaElement.parentNode.replaceChild(imageWrapper, mediaElement);
 
-mediaElement.parentNode.replaceChild(imageWrapper, mediaElement);
-
-  // Clean up inserted image styles
+  // Clean up inserted image styles if image exists
   const insertedImg = imageWrapper.querySelector("img");
-  insertedImg.className = "catch-photo";
-  insertedImg.removeAttribute("style");
+  if (insertedImg) {
+    insertedImg.className = "catch-photo";
+    insertedImg.removeAttribute("style");
+  }
 
   // Reposition caption above info
   const caption = clone.querySelector(".catch-caption");
@@ -1587,128 +1587,248 @@ mediaElement.parentNode.replaceChild(imageWrapper, mediaElement);
   cardNumber.textContent = `#${String(photo.id).padStart(3, "0")}`;
   clone.appendChild(cardNumber);
 
-  // Offscreen container for rendering
+  // Offscreen container for rendering (must be in DOM for video playback)
   const renderContainer = document.createElement("div");
   renderContainer.style.position = "absolute";
   renderContainer.style.top = "-9999px";
   renderContainer.style.left = "0";
   renderContainer.style.width = "420px";
   renderContainer.style.height = "620px";
+  renderContainer.style.overflow = "hidden";
   renderContainer.appendChild(clone);
   document.body.appendChild(renderContainer);
 
-  // Check if image is animated GIF by file extension or mime type
-  // (better would be to check actual content, but this is common heuristic)
-  const imgSrc = insertedImg.src.toLowerCase();
-  const isGif = imgSrc.endsWith(".gif") || imgSrc.includes("image/gif");
+  // Find video inside clone if any
+  const video = clone.querySelector("video.catch-photo");
 
-  if (!isGif) {
-    // Static PNG export path
-    try {
-      const canvas = await html2canvas(clone, {
-        width: clone.offsetWidth,
-        height: clone.offsetHeight,
-        scrollX: 0,
-        scrollY: 0,
-        backgroundColor: null,
-        scale: 2, // higher res
-        useCORS: true,
-      });
-      // Add watermark on canvas
-      const ctx = canvas.getContext("2d");
-      const watermarkImg = new Image();
-      watermarkImg.src = "./icon_192x192.png";
-      await new Promise((res) => {
-        watermarkImg.onload = res;
-      });
-      const size = 64,
-        padding = 10;
-      ctx.globalAlpha = 1;
-      ctx.drawImage(
-        watermarkImg,
-        canvas.width - size - padding,
-        canvas.height - size - padding,
-        size,
-        size
-      );
+  // If video exists, export WebM video using MediaRecorder + canvas capture
+  if (video) {
+    await video.play(); // Ensure video is playing
 
-      // Download PNG
-      const link = document.createElement("a");
-      link.download = `catch-card-${photo.id}.png`;
-      link.href = canvas.toDataURL("image/png");
-      link.click();
-    } catch (e) {
-      alert("Failed to export PNG: " + e.message);
-    } finally {
-      renderContainer.remove();
-    }
-    } else {
-    // Animated GIF export path — WebM via Whammy.js OR GIF via gif.js
-    try {
-      if (useWhammy) {
-        // === Whammy path ===
-        const encoder = new Whammy.Video(10); // 10 fps
+    const canvas = document.createElement("canvas");
+    canvas.width = 420 * 2; // 2x scale for quality
+    canvas.height = 620 * 2;
+    const ctx = canvas.getContext("2d");
+    ctx.scale(2, 2);
 
-        for (let i = 0; i < 10; i++) {
-          const canvasFrame = await html2canvas(clone, {
-            width: clone.offsetWidth,
-            height: clone.offsetHeight,
-            scrollX: 0,
-            scrollY: 0,
-            backgroundColor: null,
-            scale: 2,
-          });
+    const stream = canvas.captureStream(30); // 30fps
+    const recordedChunks = [];
+    const mediaRecorder = new MediaRecorder(stream, { mimeType: "video/webm" });
 
-          encoder.add(canvasFrame);
-          await new Promise((r) => setTimeout(r, 100));
+    mediaRecorder.ondataavailable = (event) => {
+      if (event.data.size > 0) recordedChunks.push(event.data);
+    };
+
+    const startTime = performance.now();
+
+    mediaRecorder.start();
+
+    function drawFrame() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+      // Draw background
+      const bgDiv = clone.querySelector(".card-background");
+      if (bgDiv) {
+        const bgStyle = window.getComputedStyle(bgDiv).backgroundImage;
+        const urlMatch = bgStyle.match(/url\(["']?(.+?)["']?\)/);
+        if (urlMatch) {
+          const bgImg = new Image();
+          bgImg.src = urlMatch[1];
+          if (bgImg.complete) {
+            ctx.drawImage(bgImg, 0, 0, 420, 620);
+          } else {
+            bgImg.onload = () => {
+              ctx.drawImage(bgImg, 0, 0, 420, 620);
+            };
+            ctx.fillStyle = "#222";
+            ctx.fillRect(0, 0, 420, 620);
+          }
+        } else {
+          ctx.fillStyle = "#222";
+          ctx.fillRect(0, 0, 420, 620);
         }
+      } else {
+        ctx.fillStyle = "#222";
+        ctx.fillRect(0, 0, 420, 620);
+      }
 
-        const output = encoder.compile();
-        const url = URL.createObjectURL(output);
+      // Draw video frame approx in .image-window area
+      const videoX = 10;
+      const videoY = 100;
+      const videoW = 400;
+      const videoH = 300;
+      ctx.drawImage(video, videoX, videoY, videoW, videoH);
+
+      // Draw rarity stars
+      const rarityDiv = clone.querySelector(".catch-rarity");
+      if (rarityDiv) {
+        ctx.font = "28px serif";
+        ctx.fillStyle = "gold";
+        ctx.textBaseline = "top";
+        ctx.fillText(rarityDiv.textContent, 10, 20);
+      }
+
+      // Draw caption
+      const captionDiv = clone.querySelector(".catch-caption");
+      if (captionDiv) {
+        ctx.font = "20px sans-serif";
+        ctx.fillStyle = "white";
+        ctx.textBaseline = "top";
+        ctx.fillText(captionDiv.textContent, 10, 420);
+      }
+
+      // Draw card number
+      const cardNumDiv = clone.querySelector(".card-number");
+      if (cardNumDiv) {
+        ctx.font = "16px monospace";
+        ctx.fillStyle = "white";
+        ctx.textBaseline = "bottom";
+        ctx.fillText(cardNumDiv.textContent, 350, 610);
+      }
+    }
+
+    return new Promise((resolve) => {
+      function renderLoop() {
+        drawFrame();
+        if (performance.now() - startTime < recordDurationMs) {
+          requestAnimationFrame(renderLoop);
+        } else {
+          mediaRecorder.stop();
+        }
+      }
+
+      mediaRecorder.onstop = () => {
+        const blob = new Blob(recordedChunks, { type: "video/webm" });
+        const url = URL.createObjectURL(blob);
+
         const a = document.createElement("a");
         a.href = url;
         a.download = `catch-card-${photo.id}.webm`;
         a.click();
-        URL.revokeObjectURL(url);
 
-      } else {
-        // === gif.js path ===
-        const gif = new GIF({
-          workers: 2,
-          quality: 10,
-          width: 420 * 2,
-          height: 620 * 2,
+        URL.revokeObjectURL(url);
+        renderContainer.remove();
+        resolve();
+      };
+
+      renderLoop();
+    });
+  } else {
+    // No video — fallback to PNG or GIF export
+
+    // Find inserted image in clone
+    const insertedImg = clone.querySelector(".catch-photo");
+    const imgSrc = insertedImg ? insertedImg.src.toLowerCase() : "";
+
+    // Check if GIF
+    const isGif = imgSrc.endsWith(".gif") || imgSrc.includes("image/gif");
+
+    if (!isGif) {
+      // PNG export path
+      try {
+        const canvas = await html2canvas(clone, {
+          width: clone.offsetWidth,
+          height: clone.offsetHeight,
+          scrollX: 0,
+          scrollY: 0,
+          backgroundColor: null,
+          scale: 2,
+          useCORS: true,
         });
 
-        for (let i = 0; i < 10; i++) {
-          const canvasFrame = await html2canvas(clone, {
-            width: clone.offsetWidth,
-            height: clone.offsetHeight,
-            scrollX: 0,
-            scrollY: 0,
-            backgroundColor: null,
-            scale: 2,
-          });
+        // Add watermark
+        const ctx = canvas.getContext("2d");
+        const watermarkImg = new Image();
+        watermarkImg.src = "./icon_192x192.png";
+        await new Promise((res) => {
+          watermarkImg.onload = res;
+        });
+        const size = 64,
+          padding = 10;
+        ctx.globalAlpha = 1;
+        ctx.drawImage(
+          watermarkImg,
+          canvas.width - size - padding,
+          canvas.height - size - padding,
+          size,
+          size
+        );
 
-          gif.addFrame(canvasFrame, { delay: 100 });
-          await new Promise((r) => setTimeout(r, 100));
-        }
+        const link = document.createElement("a");
+        link.download = `catch-card-${photo.id}.png`;
+        link.href = canvas.toDataURL("image/png");
+        link.click();
+      } catch (e) {
+        alert("Failed to export PNG: " + e.message);
+      } finally {
+        renderContainer.remove();
+      }
+    } else {
+      // Animated GIF export path (Whammy or gif.js)
+      try {
+        if (useWhammy) {
+          const encoder = new Whammy.Video(10); // 10fps
+          for (let i = 0; i < 10; i++) {
+            const canvasFrame = await html2canvas(clone, {
+              width: clone.offsetWidth,
+              height: clone.offsetHeight,
+              scrollX: 0,
+              scrollY: 0,
+              backgroundColor: null,
+              scale: 2,
+            });
 
-        gif.on("finished", function (blob) {
-          const url = URL.createObjectURL(blob);
+            encoder.add(canvasFrame);
+            await new Promise((r) => setTimeout(r, 100));
+          }
+
+          const output = encoder.compile();
+          const url = URL.createObjectURL(output);
           const a = document.createElement("a");
           a.href = url;
-          a.download = `catch-card-${photo.id}.gif`;
+          a.download = `catch-card-${photo.id}.webm`;
           a.click();
           URL.revokeObjectURL(url);
-        });
+        } else {
+          const gif = new GIF({
+            workers: 2,
+            quality: 10,
+            width: 420 * 2,
+            height: 620 * 2,
+          });
 
-        gif.render();
+          for (let i = 0; i < 10; i++) {
+            const canvasFrame = await html2canvas(clone, {
+              width: clone.offsetWidth,
+              height: clone.offsetHeight,
+              scrollX: 0,
+              scrollY: 0,
+              backgroundColor: null,
+              scale: 2,
+            });
+
+            gif.addFrame(canvasFrame, { delay: 100 });
+            await new Promise((r) => setTimeout(r, 100));
+          }
+
+          gif.on("finished", function (blob) {
+            const url = URL.createObjectURL(blob);
+            const a = document.createElement("a");
+            a.href = url;
+            a.download = `catch-card-${photo.id}.gif`;
+            a.click();
+            URL.revokeObjectURL(url);
+            renderContainer.remove();
+          });
+
+          gif.render();
+          return; // early exit as gif finishes async
+        }
+      } catch (e) {
+        alert("Failed to export animation: " + e.message);
+      } finally {
+        renderContainer.remove();
       }
-    } catch (e) {
-      alert("Failed to export animation: " + e.message);
-    } finally {
-      renderContainer.remove();
     }
   }
 }
