--- a/index.html
+++ b/index.html
@@ -1365,11 +1365,21 @@ function exportCatchCardAsImage(card, photo) {
     quality: 10,
     width: 420 * 2,
     height: 620 * 2,
-    workerScript: "https://cdnjs.cloudflare.com/ajax/libs/gif.js/0.2.0/gif.worker.js",
+    workerScript: "https://cdn.jsdelivr.net/npm/gif.js.optimized@0.2.0/dist/gif.worker.js",
   });
 
   const frameCount = 10;
   const frameDelay = 100;
+
+  gif.on("finished", function (blob) {
+    const url = URL.createObjectURL(blob);
+    const a = document.createElement("a");
+    a.href = url;
+    a.download = `catch-card-${photo.id}.gif`;
+    a.click();
+    URL.revokeObjectURL(url);
+    renderContainer.remove();
+  });
 
   try {
     for (let i = 0; i < frameCount; i++) {
@@ -1384,27 +1394,14 @@ function exportCatchCardAsImage(card, photo) {
       });
 
       gif.addFrame(canvas, { delay: frameDelay });
-
       await new Promise((res) => setTimeout(res, frameDelay));
     }
-
-    gif.on("finished", function (blob) {
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement("a");
-      a.href = url;
-      a.download = `catch-card-${photo.id}.gif`;
-      a.click();
-      URL.revokeObjectURL(url);
-
-      // Now safe to remove the offscreen container
-      renderContainer.remove();
-    });
 
     gif.render();
 
   } catch (err) {
     alert("GIF export failed: " + err.message);
-    renderContainer.remove(); // Clean up if error occurs
+    renderContainer.remove();
   }
 }
 
