--- a/index.html
+++ b/index.html
@@ -563,6 +563,33 @@
     align-self: center;
   }
 
+  .export-spinner-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0,0,0,0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.export-spinner {
+  border: 8px solid #f3f3f3; /* Light grey */
+  border-top: 8px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg);}
+  100% { transform: rotate(360deg);}
+}
+
   /* ==== Map Container ==== */
   #mapContainer {
     height: 100%;
@@ -1352,7 +1379,21 @@ function exportCatchCardAsImage(card, photo) {
   }
 }
 
-  async function exportCatchCardAsGif(card, photo) {
+  function showExportSpinner() {
+  const spinner = document.createElement("div");
+  spinner.className = "export-spinner-overlay";
+  spinner.innerHTML = `<div class="export-spinner"></div>`;
+  document.body.appendChild(spinner);
+}
+
+function hideExportSpinner() {
+  const spinner = document.querySelector(".export-spinner-overlay");
+  if (spinner) spinner.remove();
+}
+
+async function exportCatchCardAsGif(card, photo) {
+  showExportSpinner();
+
   const clone = card.cloneNode(true);
   clone.classList.add("export-style");
   clone.style.width = "420px";
@@ -1369,15 +1410,15 @@ function exportCatchCardAsImage(card, photo) {
   document.body.appendChild(renderContainer);
 
   const gif = new GIF({
-    workers: 2,              // restored to 2 workers for better performance
-    quality: 10,             // restored to quality 10 (good balance)
+    workers: 1,
+    quality: 5,
     width: 420,
     height: 620,
     workerScript: "https://cdn.jsdelivr.net/npm/gif.js.optimized@0.2.0/dist/gif.worker.js",
   });
 
-  const frameCount = 5;      // fewer frames for speed
-  const frameDelay = 150;    // slightly longer delay per frame for smoothness
+  const frameCount = 10;
+  const frameDelay = 100;
 
   gif.on("finished", function (blob) {
     const url = URL.createObjectURL(blob);
@@ -1387,6 +1428,7 @@ function exportCatchCardAsImage(card, photo) {
     a.click();
     URL.revokeObjectURL(url);
     renderContainer.remove();
+    hideExportSpinner();
   });
 
   try {
@@ -1397,7 +1439,7 @@ function exportCatchCardAsImage(card, photo) {
         scrollX: 0,
         scrollY: 0,
         backgroundColor: null,
-        scale: 1,           // 1x scale for faster rendering
+        scale: 2,
         useCORS: true,
       });
 
@@ -1406,9 +1448,11 @@ function exportCatchCardAsImage(card, photo) {
     }
 
     gif.render();
+
   } catch (err) {
     alert("GIF export failed: " + err.message);
     renderContainer.remove();
+    hideExportSpinner();
   }
 }
 
