--- a/index.html
+++ b/index.html
@@ -1490,11 +1490,9 @@ function exportCatchCardAsImage(card, photo) {
   clone.style.width = "420px";
   clone.style.height = "620px";
 
-  // Remove buttons
   const buttons = clone.querySelector(".catch-buttons");
   if (buttons) buttons.remove();
 
-  // Background
   const bg = document.createElement("div");
   bg.className = "card-background";
   const backgroundMap = {
@@ -1513,7 +1511,6 @@ function exportCatchCardAsImage(card, photo) {
   bg.style.backgroundImage = `url('${backgroundMap[starsCount]}')`;
   clone.insertBefore(bg, clone.firstChild);
 
-  // Replace photo with video element
   const originalImg = clone.querySelector(".catch-photo");
   const imageWrapper = document.createElement("div");
   imageWrapper.className = "image-window";
@@ -1523,14 +1520,22 @@ function exportCatchCardAsImage(card, photo) {
   video.autoplay = true;
   video.loop = true;
   video.muted = true;
+  video.volume = 0;
+  video.defaultMuted = true;
   video.style.width = "100%";
   video.style.height = "100%";
   video.style.objectFit = "contain";
 
+  video.addEventListener("volumechange", () => {
+    if (!video.muted || video.volume > 0) {
+      video.muted = true;
+      video.volume = 0;
+    }
+  });
+
   imageWrapper.appendChild(video);
   originalImg.parentNode.replaceChild(imageWrapper, originalImg);
 
-  // Rearrange caption
   const caption = clone.querySelector(".catch-caption");
   const info = clone.querySelector(".catch-info");
   if (caption && info && info.contains(caption)) {
@@ -1538,19 +1543,16 @@ function exportCatchCardAsImage(card, photo) {
     clone.insertBefore(caption, info);
   }
 
-  // Remove weight and date
   const weight = clone.querySelector(".catch-weight");
   if (weight) weight.remove();
   const date = clone.querySelector(".catch-date");
   if (date) date.remove();
 
-  // Card number
   const cardNumber = document.createElement("div");
   cardNumber.className = "card-number";
   cardNumber.textContent = `#${String(photo.id).padStart(3, "0")}`;
   clone.appendChild(cardNumber);
 
-  // Offscreen container to render clone
   const renderContainer = document.createElement("div");
   renderContainer.style.position = "absolute";
   renderContainer.style.top = "-9999px";
@@ -1560,76 +1562,42 @@ function exportCatchCardAsImage(card, photo) {
   renderContainer.appendChild(clone);
   document.body.appendChild(renderContainer);
 
-  // Wait for video to play
   await new Promise((resolve) => {
     video.onplaying = resolve;
     if (!video.paused) resolve();
   });
 
-  // Prepare visible canvas to draw snapshots
-  const canvas = document.createElement("canvas");
-  canvas.width = clone.offsetWidth * 2;  // scale 2 for quality
-  canvas.height = clone.offsetHeight * 2;
-  const ctx = canvas.getContext("2d");
-
-  // Append canvas offscreen so MediaRecorder can record
-  canvas.style.position = "fixed";
-  canvas.style.top = "-9999px";
-  canvas.style.left = "0";
-  document.body.appendChild(canvas);
-
-  // Create MediaRecorder from canvas stream
-  const stream = canvas.captureStream(10); // 10 fps
-  const recordedChunks = [];
-  const mediaRecorder = new MediaRecorder(stream, { mimeType: "video/webm" });
-
-  mediaRecorder.ondataavailable = (e) => {
-    if (e.data.size > 0) recordedChunks.push(e.data);
-  };
-
-  mediaRecorder.start();
-
   showExportProgress();
 
-  const recordDurationMs = 5000; // 1 second video approx
-  const frameDelay = 1000 / 10; // 10 fps
-  const totalFrames = Math.floor(recordDurationMs / frameDelay);
-
-  for (let i = 0; i < totalFrames; i++) {
-    // Render clone to canvas using html2canvas
-    const snapshot = await html2canvas(clone, {
-      width: clone.offsetWidth,
-      height: clone.offsetHeight,
-      backgroundColor: null,
-      scale: 2,
-      useCORS: true,
-    });
-
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
-    ctx.drawImage(snapshot, 0, 0, canvas.width, canvas.height);
-
-    updateExportProgress(((i + 1) / totalFrames) * 100, `Recording frame ${i + 1} of ${totalFrames}`);
-
-    await new Promise((r) => setTimeout(r, frameDelay));
-  }
-
-  mediaRecorder.stop();
-
-  await new Promise((resolve) => {
-    mediaRecorder.onstop = resolve;
+  // === MediaRecorder Section ===
+  const stream = await html2canvas(clone, {
+    width: clone.offsetWidth,
+    height: clone.offsetHeight,
+    scale: 2,
+    useCORS: true,
+  }).then(canvas => {
+    const canvasStream = canvas.captureStream(30);
+    return canvasStream;
   });
 
-  updateExportProgress(100, "Finalizing video...");
+  const recorder = new MediaRecorder(stream, { mimeType: "video/webm" });
+  const chunks = [];
 
-  // Create blob from recorded chunks
-  const videoBlob = new Blob(recordedChunks, { type: "video/webm" });
+  recorder.ondataavailable = (e) => chunks.push(e.data);
 
-  manualDownload(videoBlob, `catch-card-${photo.id}.webm`);
+  recorder.onstop = () => {
+    const blob = new Blob(chunks, { type: "video/webm" });
+    const url = URL.createObjectURL(blob);
+    manualDownload(blob, `catch-card-${photo.id}.webm`);
+    renderContainer.remove();
+    hideExportProgress();
+  };
 
-  // Clean up
-  renderContainer.remove();
-  canvas.remove();
-  hideExportProgress();
+  recorder.start();
+
+  setTimeout(() => {
+    recorder.stop();
+  }, 3000); // Record for 3 seconds
 }
   
 async function exportCatchCard(card, photo, recordDurationMs = 5000, useWhammy = true) {
